--- a/chat/templates/feed.html
+++ b/chat/templates/feed.html
@@ -14,31 +14,38 @@
       			<span class="navbar-toggler-icon"></span>
     			</button>
     			<div class="collapse navbar-collapse" id="navbarColor02">
-      				<ul class="navbar-nav me-auto">
-        				<li class="nav-item">
-          					<a class="nav-link active" href="{% url 'chatapp:feed' %}">Feed
-            				<span class="visually-hidden">(current)</span>
-          					</a>
-        				</li>
-        				<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:register' %}">Register</a>
-        				</li>
-        				<li class="nav-item">
-         					<a class="nav-link" href="{% url 'chatapp:logout' %}">Logout</a>
-        				</li>
-       					<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:login' %}">Login</a>
-        				</li>
-        				<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:explore' %}">Explore</a>
-        				</li>
-        				
-      				</ul>
-      				<form class="d-flex">
-        				<input class="form-control me-sm-2" type="search" placeholder="Search">
-        				<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-      				</form>
-    			</div>
+              <ul class="navbar-nav me-auto">
+                {% if user %}
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:logout' %}">Logout</a>
+                  </li>
+
+                {% else %}
+
+                  <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'chatapp:profile' %}">Login
+                    <span class="visually-hidden">{{ user }}</span>
+                    </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:register' %}">Register</a>
+                  </li>
+
+                {% endif %}
+                
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:feed' %}">Feed</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:explore' %}">Explore</a>
+                </li>
+                
+              </ul>
+              
+          </div>
   		</div>
 	</nav>
 	<div class="container jumbotron" id="content">
