--- a/chat/templates/login.html
+++ b/chat/templates/login.html
@@ -13,28 +13,38 @@
       			<span class="navbar-toggler-icon"></span>
     			</button>
     			<div class="collapse navbar-collapse" id="navbarColor02">
-      				<ul class="navbar-nav me-auto">
-        				<li class="nav-item">
-          					<a class="nav-link active" href="{$ url 'chatapp:login' $}">Login
-            				<span class="visually-hidden">(current)</span>
-          					</a>
-        				</li>
-        				<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:register' %}">Register</a>
-        				</li>
-        				<li class="nav-item">
-         					<a class="nav-link" href="{% url 'chatapp:logout' %}">Logout</a>
-        				</li>
-       					<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:feed' %}">Feed</a>
-        				</li>
-        				<li class="nav-item">
-          					<a class="nav-link" href="{% url 'chatapp:explore' %}">Explore</a>
-        				</li>
-        				
-      				</ul>
-      				
-    			</div>
+              <ul class="navbar-nav me-auto">
+                {% if user %}
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:logout' %}">Logout</a>
+                  </li>
+
+                {% else %}
+
+                  <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'chatapp:profile' %}">Login
+                    <span class="visually-hidden">{{ user }}</span>
+                    </a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:register' %}">Register</a>
+                  </li>
+
+                {% endif %}
+                
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:feed' %}">Feed</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'chatapp:explore' %}">Explore</a>
+                </li>
+                
+              </ul>
+              
+          </div>
   		</div>
 	</nav>
 
